--- a/index.html
+++ b/index.html
@@ -8,13 +8,41 @@
     <title>Carousel</title>
 </head>
 <body>
+    <!-- CONTAINER PRINCIPALE -->
     <div class="container_principale">
+
+    <!-- CONTAINER IMMAGINI (SLIDER) -->
         <div class="slider">
-            <div class="thumb"></div>
-            <div class="thumb"></div>
-            <div class="thumb"></div>
-            <div class="thumb"></div>
-            <div class="thumb"></div>
+
+            <!-- IMM PRINCIPALE -->
+            <div class="thumb-big">
+                <img src="img/01.jpg" alt="" class="img-big">
+            </div>
+
+            <!-- ANTEPRIMA IMMAGINI -->
+            <div class="thumb-small">
+
+                <div class="thumb">
+                    <img src="img/01.jpg" alt="" class="img-small">
+                </div>
+
+                <div class="thumb">
+                    <img src="img/02.jpg" alt="" class="img-small">
+                </div>
+
+                <div class="thumb">
+                    <img src="img/03.jpg" alt="" class="img-small">
+                </div>
+
+                <div class="thumb">
+                    <img src="img/04.jpg" alt="" class="img-small">
+                </div>
+
+                <div class="thumb">
+                    <img src="img/05.jpg" alt="" class="img-small">
+                </div>
+            </div>
+
         </div>
     </div>
     <script src="js/script.js"></script>
