--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
             <!-- IMM PRINCIPALE -->
             <div class="thumb-big">
-                <img src="img/01.jpg" alt="" class="img-big">
+                <!-- <img src="img/01.jpg" alt="" class="img-big"> -->
             </div>
 
             <!-- ANTEPRIMA IMMAGINI -->
             <div class="thumb-small">
 
-                <div class="thumb">
+                <!-- <div class="thumb">
                     <img src="img/01.jpg" alt="" class="img-small">
                 </div>
 
@@ -40,7 +40,7 @@
 
                 <div class="thumb">
                     <img src="img/05.jpg" alt="" class="img-small">
-                </div>
+                </div> -->
             </div>
 
         </div>
